--- a/src/pages/agent-full-page/plugin-header/plugin-header.module.scss
+++ b/src/pages/agent-full-page/plugin-header/plugin-header.module.scss
@@ -82,16 +82,19 @@
     align-items: center;
     justify-content: center;
     margin-left: 8px;
+    padding: 2px 6px;
+    border: 1px solid currentColor;
+    border-radius: 50px;
     font-family: $semibold-font;
     font-size: 11px;
     line-height: 12px;
-    border: 1px solid currentColor;
-    border-radius: 50px;
-    padding: 2px 6px;
 
     &--status {
       &--online {
         color: map-get($color-palette, green100);
+      }
+      &--offline {
+        color: map-get($color-palette, red100);
       }
       &--not-registered {
         color: map-get($color-palette, red100);
