EPMDJ-2084:  Implemented "mouseover" for all entries in the project.
Issue: EPMDJ-2084

--- a/src/components/list/list.module.scss
+++ b/src/components/list/list.module.scss
@@ -4,10 +4,21 @@
   display: grid;
   align-items: center;
 
-  & > div {
-    display: flex;
-    align-items: center;
-    height: 80px;
-    border-bottom: 1px solid map-get($color-palette, black10);
+  &__header {
+    @extend %grid-row-styles;
   }
+
+  &__row {
+    @extend %grid-row-styles;
+    &:hover {
+      background-color: rgba(248, 231, 28, 0.1);
+    }
+  }
+}
+
+%grid-row-styles {
+  display: grid;
+  align-items: center;
+  height: 80px;
+  border-bottom: 1px solid map-get($color-palette, black10);
 }
