--- a/src/components/table/table.module.scss
+++ b/src/components/table/table.module.scss
@@ -40,6 +40,10 @@
         background-color: rgba(248, 231, 28, 0.1);
       }
     }
+
+    &:hover {
+      background-color: rgba(248, 231, 28, 0.1);
+    }
   }
 
   &__toggle {
