--- a/src/pages/agent-registration-page/install-plugins-step/install-plugins-step.module.scss
+++ b/src/pages/agent-registration-page/install-plugins-step/install-plugins-step.module.scss
@@ -26,4 +26,10 @@
   &__plugins-list {
     margin: 0 24px;
   }
+  &__plugin-name {
+    font-family: $semibold-font;
+    font-size: 14px;
+    line-height: 22px;
+    color: $gravel-color;
+  }
 }
