--- a/src/pages/settings-page/agent-settings/plugins-settings/plugins-settings.module.scss
+++ b/src/pages/settings-page/agent-settings/plugins-settings/plugins-settings.module.scss
@@ -47,4 +47,11 @@
     flex-grow: 1;
     margin: 0px 24px;
   }
+
+  &__plugin-name {
+    font-family: $semibold-font;
+    font-size: 14px;
+    line-height: 22px;
+    color: map-get($color-palette, blue100);
+  }
 }
