--- a/src/pages/settings-page/agent-settings/system-setting-form/unlocking-system-settings-form-modal/unlocking-system-settings-form-modal.module.scss
+++ b/src/pages/settings-page/agent-settings/system-setting-form/unlocking-system-settings-form-modal/unlocking-system-settings-form-modal.module.scss
@@ -28,7 +28,7 @@
     color: $slate-gray;
   }
 
-  &__cancel-button {
+  &__cancel-unlocking-button {
     min-height: 32px;
     width: 78px;
     margin-left: 16px;
