--- a/src/pages/agent-full-page/coverage-plugin/scope/rename-scope-modal/rename-scope-modal.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/rename-scope-modal/rename-scope-modal.module.scss
@@ -28,14 +28,7 @@
   &__rename-scope-button {
     min-height: 32px;
     width: 96px;
+    margin-right: 16px;
     font-size: 14px;
-  }
-
-  &__cancel-button {
-    margin-left: 16px;
-    min-height: 32px;
-    width: 78px;
-    border: 1px solid $loblolly-color;
-    color: $slate-gray;
   }
 }
