--- a/src/pages/settings-page/agent-settings/plugins-settings/add-plugins-modal/selectable-list/selectable-list.module.scss
+++ b/src/pages/settings-page/agent-settings/plugins-settings/add-plugins-modal/selectable-list/selectable-list.module.scss
@@ -6,6 +6,10 @@
     flex-direction: column;
     align-items: flex-end;
 
+    &:hover {
+      background-color: rgba(248, 231, 28, 0.1);
+    }
+
     &--selected {
       background-color: rgba(248, 231, 28, 0.1);
     }
