--- a/src/pages/agent-full-page/coverage-plugin/risks-modal/risks-modal.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/risks-modal/risks-modal.module.scss
@@ -9,8 +9,8 @@
     display: flex;
     align-items: center;
     height: 63px;
-    border-bottom: 1px solid map-get($color-palette, light-blue);
     padding-left: 24px;
+    border-bottom: 1px solid map-get($color-palette, light-blue);
     font-size: 18px;
     line-height: 24px;
     color: map-get($color-palette, black100);
@@ -21,19 +21,19 @@
   }
 
   &__content {
-    height: 100%;
-    width: 100%;
-    overflow-y: auto;
-    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    overflow-y: hidden;
   }
 
   &__notification-panel {
     height: 40px;
+    padding: 0 24px;
     font-size: 13px;
+    background-color: map-get($color-palette, light-blue);
     line-height: 20px;
     opacity: 0.5;
-    background-color: map-get($color-palette, light-blue);
-    padding: 0 24px;
   }
 
   &__bold {
@@ -52,19 +52,20 @@
   &__methods-list {
     display: flex;
     flex-direction: column;
-    font-size: 14px;
+    height: 100%;
     margin-top: 16px;
+    font-size: 14px;
   }
 
   &__methods-list-item {
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 400px;
     min-height: 40px;
+    margin-bottom: 16px;
     padding-left: 24px;
     font-size: 12px;
-    margin-bottom: 16px;
-    width: 400px;
   }
 
   &__methods-list-item-icon {
@@ -76,6 +77,7 @@
   &__methods-info {
     display: flex;
     flex-direction: column;
+    width: 280px;
   }
 
   &__methods-package {
