EPMDJ-2215: Changed text and indents
Issue: EPMDJ-2215

--- a/src/pages/service-group-full-page/service-group-dashboard/finish-all-scopes-modal/finish-all-scopes-modal.module.scss
+++ b/src/pages/service-group-full-page/service-group-dashboard/finish-all-scopes-modal/finish-all-scopes-modal.module.scss
@@ -25,6 +25,11 @@
 
   &__instructions {
     margin-top: 8px;
+
+    & > *::before {
+      margin: 0px 16px;
+      content: '•';
+    }
   }
 
   &__actions-panel {
