EPMDJ-2212: redesign alerts panel
Issue: EPMDJ-2212

--- a/src/common/style-guide/_colors.scss
+++ b/src/common/style-guide/_colors.scss
@@ -22,9 +22,10 @@ $color-palette: (
   blue75: #3399ff,
   blue15: #d9ecff,
   yellow100: #f8e71c,
-  yellow50: #faa214,
+  yellow50: #f5a623,
+  yellow25: #fef6e9,
   yellow10: #fefce8,
-  red100: #ff0202,
+  red100: #ee0000,
   red50: #e70100,
   red10: #ffe5e5,
   green100: #00b602,
