EPMDJ-2253: Changed color of selected items from yellow to gray
Issue: EPMDJ-2253

--- a/src/pages/login-page/login-page.module.scss
+++ b/src/pages/login-page/login-page.module.scss
@@ -67,6 +67,11 @@
     opacity: 0.25;
   }
 
+  &__continue-button {
+    height: $common-element-height;
+    width: 320px;
+  }
+
   &__copyright {
     margin-top: 130px;
     color: $slate-gray;
