--- a/src/pages/service-group-full-page/service-group-dashboard/dashboard-header-cell/dashboard-header-cell.module.scss
+++ b/src/pages/service-group-full-page/service-group-dashboard/dashboard-header-cell/dashboard-header-cell.module.scss
@@ -2,23 +2,37 @@
 
 .dashboard-header-cell {
   &__content {
-    display: flex;
-    flex-direction: column;
     border-left: 1px solid map-get($color-palette, black10);
   }
+
   &__label {
     font-family: $semibold-font;
     font-size: 12px;
     color: $slate-gray;
     text-transform: uppercase;
-    padding-left: 16px;
+    margin-left: 16px;
   }
 
   &__value {
-    padding-left: 16px;
-
+    display: inline-grid;
+    grid-template-columns: max-content;
+    margin-left: 16px;
     font-size: 20px;
     color: map-get($color-palette, black100);
+    pointer-events: none;
+
+    &--clickable {
+      background-image: linear-gradient(
+        to right,
+        map-get($color-palette, black100) 50%,
+        transparent 50%
+      );
+      background-position: 0 1.15em;
+      background-repeat: repeat-x;
+      background-size: 2px 1px;
+      pointer-events: auto;
+      cursor: pointer;
+    }
   }
 
   &__arrow-icon {
