EPMDJ-2284: Added text "Choose plugins to install" and update styles
Issue: EPMDJ-2284

--- a/src/pages/service-group-registration-page/service-group-registration-page.module.scss
+++ b/src/pages/service-group-registration-page/service-group-registration-page.module.scss
@@ -30,11 +30,19 @@
   }
 
   &__info-panel-text {
-    margin-right: 8px;
+    :last-child {
+      margin-top: 8px;
+    }
+  }
+
+  &__action-name {
+    margin: 16px 24px;
+    font-family: $light-font;
+    font-size: 20px;
   }
 
   &__selected-plugins-info {
-    margin: 28px 0px 16px 24px;
+    margin: 0px 0px 16px 24px;
     font-family: $light-font;
     font-size: 16px;
     color: $gravel-color;
