--- a/src/pages/login-page/login-page.module.scss
+++ b/src/pages/login-page/login-page.module.scss
@@ -51,6 +51,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 16px;
 
     & > * {
       margin-left: 16px;
@@ -70,6 +71,7 @@
   &__continue-button {
     height: $common-element-height;
     width: 320px;
+    font-size: 14px;
   }
 
   &__copyright {
