--- a/src/pages/agent-full-page/dashboard/plugin-card/plugin-card.module.scss
+++ b/src/pages/agent-full-page/dashboard/plugin-card/plugin-card.module.scss
@@ -2,8 +2,8 @@
 
 .plugin-card {
   border: 1px solid map-get($color-palette, light-blue);
-  height: 214px;
   width: 100%;
+  height: fit-content;
 
   &__header {
     height: 52px;
@@ -24,7 +24,6 @@
   &__content {
     display: flex;
     flex-direction: row;
-    height: 160px;
 
     & > *:not(:last-child) {
       border-right: 1px solid map-get($color-palette, light-blue);
@@ -32,7 +31,6 @@
   }
 
   &__section {
-    height: 100%;
     width: 100%;
     padding: 16px;
   }
