EPMDJ-2355: Change the view of curl comand
Issue: EPMDJ-2355

--- a/src/modules/tests-to-run-modal/tests-to-run-modal.module.scss
+++ b/src/modules/tests-to-run-modal/tests-to-run-modal.module.scss
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: column;
     padding: 10px 24px;
-    font-size: 13px;
+    font-size: 14px;
     line-height: 20px;
     background-color: map-get($color-palette, light-blue);
     overflow-wrap: break-word;
@@ -49,17 +49,15 @@
     }
   }
 
-  &__curl-command {
-    width: 320px;
-  }
-
   &__copy-icon {
     display: none;
-    margin-left: 8px;
-    min-width: 16px;
-    min-height: 16px;
+    margin-left: 36px;
     color: map-get($color-palette, blue100);
     cursor: pointer;
+
+    &:active {
+      color: map-get($color-palette, blue125);
+    }
   }
 
   &__content {
