EPMDJ-2283: Implement breadcrumbs functionality
Issue: EPMDJ-2283

--- a/src/modules/breadcrumbs/breadcrumbs.module.scss
+++ b/src/modules/breadcrumbs/breadcrumbs.module.scss
@@ -3,7 +3,9 @@
 .breadcrumbs {
   :not(:last-child) {
     &:after {
-      content: ' > ';
+      padding: 0 8px;
+      color: map-get($color-palette, black100);
+      content: '/';
     }
   }
 
