--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin.module.scss
@@ -6,13 +6,9 @@
   display: flex;
   flex-direction: column;
 
-  &__header {
-    margin: 0 24px;
-  }
-
   &__content {
     flex-grow: 1;
-    padding: 16px 24px 0 24px;
+    padding: 0 24px;
   }
 
   &__settings-button {
