--- a/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-info.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-info.module.scss
@@ -1,33 +1,27 @@
 @import '~common/style-guide/index';
 
 .scope-info {
-  &__back-to-scopes-list {
-    font-size: 12px;
-    line-height: 24px;
-    font-family: $semibold-font;
-    color: map-get($color-palette, blue100);
-    cursor: pointer;
-  }
-
   &__header {
-    height: 60px;
+    height: 80px;
     margin-bottom: 24px;
+    border-bottom: 1px solid map-get($color-palette, light-blue);
     font-size: 24px;
     color: map-get($color-palette, black100);
   }
 
+  &__scope-name {
+    font-size: 24px;
+    font-family: $light-font;
+    color: map-get($color-palette, black100);
+  }
+
   &__active-badge {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 20px;
-    width: 49px;
-    margin-left: 16px;
-    border-radius: 10px;
-    background-color: map-get($color-palette, green100);
-    font-size: 11px;
-    font-family: $semibold-font;
-    color: map-get($color-palette, white);
+    height: 22px;
+    padding: 1px 8px;
+    border: 1px solid map-get($color-palette, green100);
+    border-radius: 11px;
+    font-size: 12px;
+    color: map-get($color-palette, green100);
   }
 
   &__finished-badge {
