--- a/src/pages/agent-full-page/plugin-header/plugin-header.module.scss
+++ b/src/pages/agent-full-page/plugin-header/plugin-header.module.scss
@@ -2,13 +2,15 @@
 
 .plugin-header {
   display: flex;
-  align-items: center;
   height: 112px;
   width: 100%;
 
   &__content {
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+    width: 100%;
     padding: 0 24px;
   }
 
@@ -59,8 +61,7 @@
   &__agent-info {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    margin-left: 20px;
+    margin-left: 24px;
 
     & > * {
       margin-bottom: 8px;
@@ -101,5 +102,17 @@
 
   &__spinner-wrapper {
     margin-left: 8px;
+  }
+
+  &__settings-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 32px;
+    width: 32px;
+    border: 1px solid map-get($color-palette, blue100);
+    border-radius: 16px;
+    color: map-get($color-palette, blue100);
+    cursor: pointer;
   }
 }
