EPMDJ-2428: Update design in test2code and scope page
Issue: EPMDJ-2428

--- a/src/pages/agent-full-page/coverage-plugin/overview/overview.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/overview/overview.module.scss
@@ -28,6 +28,7 @@
     display: flex;
     align-items: center;
     margin-right: 8px;
+    color: map-get($color-palette, black100);
   }
 
   &__scope-duration-icon {
