--- a/src/pages/agent-full-page/coverage-plugin/code-coverage-card/coverages-by-type/coverages-by-type.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/code-coverage-card/coverages-by-type/coverages-by-type.module.scss
@@ -83,8 +83,8 @@
   }
 
   &__tests-count {
-    font-size: 12px;
     margin-left: 8px;
+    font-size: 12px;
   }
 
   &__test-type-coverage {
@@ -92,7 +92,7 @@
     flex-direction: row-reverse;
     width: 100%;
     font-size: 12px;
-    line-height: 24px;
     font-family: $semibold-font;
+    color: map-get($color-palette, black100);
   }
 }
