--- a/src/pages/agent-full-page/coverage-plugin/code-coverage-card/detailed-code-coverage-card/coverage-distribution/coverage-distribution.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/code-coverage-card/detailed-code-coverage-card/coverage-distribution/coverage-distribution.module.scss
@@ -68,13 +68,16 @@
   }
 
   &__tests-count {
-    font-size: 12px;
-    margin-left: 8px;
+    @extend %tests-styles;
   }
 
   &__test-type-coverage {
-    font-size: 12px;
-    line-height: 24px;
-    font-family: $semibold-font;
+    @extend %tests-styles;
   }
+}
+
+%tests-styles {
+  font-family: $semibold-font;
+  font-size: 12px;
+  color: map-get($color-palette, black100);
 }
