--- a/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-info.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-info.module.scss
@@ -3,7 +3,7 @@
 .scope-info {
   &__header {
     height: 80px;
-    margin-bottom: 24px;
+    margin-bottom: 8px;
     border-bottom: 1px solid map-get($color-palette, light-blue);
     font-size: 24px;
     color: map-get($color-palette, black100);
@@ -49,17 +49,21 @@
   }
 
   &__project-methods {
-    margin-top: 16px;
+    margin-top: 8px;
     width: 100%;
   }
 
   &__routing-tabs-panel {
-    height: 49px;
     width: 100%;
+    height: 49px;
+    margin-top: 24px;
     border-bottom: 1px solid map-get($color-palette, light-blue);
   }
 
   &__tab-icon-wrapper {
+    display: flex;
+    align-items: center;
     margin-right: 8px;
+    color: map-get($color-palette, black100);
   }
 }
