EPMDJ-2427: Add the functionality of table sorting
Issue: EPMDJ-2427

--- a/src/common/style-guide/_colors.scss
+++ b/src/common/style-guide/_colors.scss
@@ -2,6 +2,8 @@ $slate-gray: #74818e;
 $athens-gray: #f2f4f7;
 $gravel-color: #464547;
 $loblolly-color: #bdc7cc;
+$monochrome-default: #687481;
+$medium-tint: #e3e6e8;
 
 $color-palette: (
   white: #fff,
