EPMDJ-2490: Update styles SG registration for high-resolution screens
Issue: EPMDJ-2490

--- a/src/pages/service-group-registration-page/service-group-registration-page.module.scss
+++ b/src/pages/service-group-registration-page/service-group-registration-page.module.scss
@@ -1,6 +1,7 @@
 @import '~common/style-guide/index';
 
 .service-group-registration-page {
+  max-width: 100%;
   min-width: 850px;
 
   &__header {
