EPMDJ-1177: Create "Notification" pane
Issue: EPMDJ-1177

--- a/src/common/style-guide/_colors.scss
+++ b/src/common/style-guide/_colors.scss
@@ -24,8 +24,9 @@ $color-palette: (
   yellow50: #f5a623,
   yellow25: #fef6e9,
   yellow10: #fefce8,
+  red125: #cc0000,
   red100: #ee0000,
-  red50: #e70100,
+  red50: #f13333,
   red10: #ffe5e5,
   green100: #00b602,
   green10: #e5f7e5,
