--- a/src/pages/service-group-registration-page/service-group-registration-page.module.scss
+++ b/src/pages/service-group-registration-page/service-group-registration-page.module.scss
@@ -1,7 +1,7 @@
 @import '~common/style-guide/index';
 
 .service-group-registration-page {
-  max-width: 100%;
+  width: 100%;
   min-width: 850px;
 
   &__header {
