EPMDJ-1891: Implement baseline func. for BuildList and T2c
Issue: EPMDJ-1891

--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/coverage-plugin-header.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/coverage-plugin-header.module.scss
@@ -8,6 +8,7 @@
   width: 100%;
   margin-bottom: 8px;
   border-bottom: 1px solid map-get($color-palette, light-blue);
+  color: map-get($color-palette, black100);
 
   &__plugin-name {
     font-family: $light-font;
