--- a/src/components/toolbar/notifications-sidebar/notification/notification.module.scss
+++ b/src/components/toolbar/notifications-sidebar/notification/notification.module.scss
@@ -124,14 +124,7 @@
 
   &__notification-button {
     color: map-get($color-palette, blue100);
-    cursor: pointer;
-
-    &:hover {
-      color: map-get($color-palette, blue75);
-    }
-
-    &:active {
-      color: map-get($color-palette, blue125);
-    }
+    cursor: not-allowed;
+    opacity: 0.5;
   }
 }
