EPMDJ-2571: change offline agent status color to shade gray
Issue: EPMDJ-2571

--- a/src/pages/agent-full-page/plugin-header/plugin-header.module.scss
+++ b/src/pages/agent-full-page/plugin-header/plugin-header.module.scss
@@ -89,7 +89,7 @@
         color: map-get($color-palette, green100);
       }
       &--offline {
-        color: map-get($color-palette, red100);
+        color: map-get($color-palette, middle-blue);
       }
       &--not-registered {
         color: map-get($color-palette, red100);
