EPMDJ-2746: Add Drill artefact versions displayin
Issue: EPMDJ-2746g

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -17,7 +17,8 @@
 
   &__admin-info {
     & > *:not(:last-child)::after {
-      content: '  ·  ';
+      content: '\2022';
+      margin: 0 8px;
     }
   }
 
@@ -25,7 +26,8 @@
     text-decoration: none;
     color: $slate-gray;
     &:not(:last-child)::after {
-      content: '  ·  ';
+      content: '\2022';
+      margin: 0 8px;
     }
   }
 }
