--- a/src/pages/agent-full-page/coverage-plugin/scope/scopes-list/scopes-list.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/scopes-list/scopes-list.module.scss
@@ -80,7 +80,7 @@
 
     & > *:first-child {
       &::before {
-        content: '·';
+        content: '\2022';
         margin: 0 4px;
       }
     }
