--- a/src/pages/agent-registration-page/install-plugins-step/install-plugins-step.module.scss
+++ b/src/pages/agent-registration-page/install-plugins-step/install-plugins-step.module.scss
@@ -33,4 +33,10 @@
     line-height: 22px;
     color: $gravel-color;
   }
+
+  &__plugin-version {
+    font-size: 14px;
+    line-height: 22px;
+    color: map-get($color-palette, black75);
+  }
 }
