--- a/src/pages/settings-page/agent-settings/plugins-settings/add-plugins-modal/selectable-list/selectable-list.module.scss
+++ b/src/pages/settings-page/agent-settings/plugins-settings/add-plugins-modal/selectable-list/selectable-list.module.scss
@@ -73,4 +73,10 @@
     font-family: $semibold-font;
     color: $gravel-color;
   }
+
+  &__plugin-version {
+    margin-right: 8px;
+    font-size: 12px;
+    color: map-get($color-palette, black100);
+  }
 }
