--- a/src/pages/settings-page/agent-settings/plugins-settings/plugins-settings.module.scss
+++ b/src/pages/settings-page/agent-settings/plugins-settings/plugins-settings.module.scss
@@ -50,4 +50,10 @@
     line-height: 22px;
     color: map-get($color-palette, blue100);
   }
+
+  &__plugin-version {
+    font-size: 14px;
+    line-height: 22px;
+    color: map-get($color-palette, black75);
+  }
 }
