EPMDJ-2635: Fix errors. Update styles. Add ui-kit components
Issue: EPMDJ-2635

--- a/src/modules/breadcrumbs/breadcrumbs.module.scss
+++ b/src/modules/breadcrumbs/breadcrumbs.module.scss
@@ -1,6 +1,10 @@
 @import '~common/style-guide/index';
 
 .breadcrumbs {
+  :last-child {
+    color: map-get($monochrome, default);
+  }
+
   :not(:last-child) {
     &:after {
       padding: 0 8px;
