--- a/src/pages/agent-full-page/coverage-plugin/scope/rename-scope-modal/rename-scope-modal.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/rename-scope-modal/rename-scope-modal.module.scss
@@ -3,32 +3,15 @@
 .rename-scope-modal {
   width: 480px;
 
-  &__error-message {
-    width: 100%;
-    background-color: rgba(255, 2, 2, 0.1);
-    font-size: 14px;
-    line-height: 24px;
-    color: map-get($color-palette, red100);
-  }
-
-  &__error-message-icon {
-    margin-left: 24px;
-    margin-right: 8px;
-    flex-shrink: 0;
-  }
-
   &__content {
     margin: 24px;
   }
 
   &__actions-panel {
     margin-top: 38px;
-  }
 
-  &__rename-scope-button {
-    min-height: 32px;
-    width: 96px;
-    margin-right: 16px;
-    font-size: 14px;
+    :first-child {
+      margin-right: 16px;
+    }
   }
 }
