--- a/src/pages/settings-page/agent-settings/plugins-settings/add-plugins-modal/add-plugins-modal.module.scss
+++ b/src/pages/settings-page/agent-settings/plugins-settings/add-plugins-modal/add-plugins-modal.module.scss
@@ -89,17 +89,10 @@
     display: flex;
     align-items: center;
     padding-left: 24px;
-    background-color: map-get($color-palette, light-blue);
+    background-color: map-get($monochrome, light-tint);
 
     & > * {
       margin-right: 16px;
     }
-  }
-
-  &__add-plugin-button {
-    min-height: 32px;
-    width: 104px;
-    font-size: 14px;
-    line-height: 19px;
   }
 }
