--- a/src/components/plugin-list-entry/plugin-list-entry.module.scss
+++ b/src/components/plugin-list-entry/plugin-list-entry.module.scss
@@ -1,11 +1,11 @@
 @import '~common/style-guide/index';
 
 .plugin-list-entry {
-  border-bottom: 1px solid map-get($color-palette, light-blue);
+  border-bottom: 1px solid map-get($monochrome, medium-tint);
   cursor: pointer;
 
   &:first-child {
-    border-top: 1px solid map-get($color-palette, light-blue);
+    border-top: 1px solid map-get($monochrome, medium-tint);
   }
 
   &:hover {
@@ -19,7 +19,7 @@
 
     &--selected {
       background-color: rgba(0, 127, 255, 0.15);
-      color: map-get($color-palette, white);
+      color: map-get($monochrome, white);
     }
   }
 
@@ -31,18 +31,18 @@
     height: 80px;
     min-width: 80px;
     border-radius: 16px;
-    background-color: map-get($color-palette, ultra-light-blue);
+    background-color: map-get($monochrome, light-tint);
     color: $slate-gray;
 
     &--selected {
-      background-color: map-get($color-palette, blue100);
-      color: map-get($color-palette, white);
+      background-color: map-get($primary-blue, default);
+      color: map-get($monochrome, white);
     }
   }
 
   &__plugin-description {
     font-size: 14px;
-    line-height: 22px;
-    color: $slate-gray;
+    line-height: 20px;
+    color: map-get($monochrome, default);
   }
 }
