--- a/src/pages/login-page/login-page.module.scss
+++ b/src/pages/login-page/login-page.module.scss
@@ -47,17 +47,6 @@
     }
   }
 
-  &__sign-in-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 16px;
-
-    & > * {
-      margin-left: 16px;
-    }
-  }
-
   &__forgot-password {
     margin-top: 8px;
     margin-bottom: 42px;
@@ -68,10 +57,10 @@
     opacity: 0.25;
   }
 
-  &__continue-button {
-    height: $common-element-height;
+  &__login-page-button-wrapepr {
+    display: flex;
+    flex-direction: column;
     width: 320px;
-    font-size: 14px;
   }
 
   &__copyright {
