--- a/src/pages/settings-page/agent-settings/system-setting-form/system-settings-form.module.scss
+++ b/src/pages/settings-page/agent-settings/system-setting-form/system-settings-form.module.scss
@@ -15,12 +15,8 @@
   }
 
   &__save-changes-button {
-    min-height: 32px;
-    width: 122px;
-    min-width: 122px;
-    border-radius: 16px;
-    font-size: 14px;
-    font-family: $semibold-font;
+    max-height: 32px;
+    width: 142px;
   }
 
   &__content {
@@ -80,6 +76,7 @@
   }
 
   &__header-mapping {
+    margin-top: 16px;
     max-width: 728px;
   }
 }
