--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/coverage-plugin-header.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/coverage-plugin-header.module.scss
@@ -19,4 +19,35 @@
     display: flex;
     align-items: center;
   }
+
+  &__status-wrapper {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    cursor: pointer;
+
+    &:hover {
+      text-decoration: underline;
+    }
+
+    &--type {
+      &--passed {
+        color: map-get($green, default);
+      }
+
+      &--failed {
+        color: map-get($red, default);
+      }
+    }
+  }
+
+  &__status-title {
+    margin-left: 8px;
+    font-family: $semibold-font;
+    text-transform: lowercase;
+
+    &::first-letter {
+      text-transform: uppercase;
+    }
+  }
 }
