--- a/src/modules/system-setting-step/system-settings-step.module.scss
+++ b/src/modules/system-setting-step/system-settings-step.module.scss
@@ -18,21 +18,21 @@
     flex-direction: column;
     flex-grow: 1;
     max-width: 728px;
-    height: 80px;
   }
 
   &__project-packages {
+    height: 80px;
     font-size: 14px;
     line-height: 24px;
     color: map-get($monochrome, black);
   }
 
   &__instructions {
-    max-width: 352px;
+    max-width: 280px;
     margin-left: 24px;
-    color: $slate-gray;
+    color: map-get($monochrome, default);
     font-size: 12px;
-    line-height: 20px;
+    line-height: 16px;
   }
 
   &__header-mapping {
