--- a/src/pages/agent-full-page/coverage-plugin/project-methods-card/project-methods-card.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/project-methods-card/project-methods-card.module.scss
@@ -1,25 +1,7 @@
 @import '~common/style-guide/index';
 
 .project-methods-card {
-  display: flex;
-  flex-direction: row;
-
-  & > :not(:last-child) {
-    margin-right: 8px;
-  }
-
-  &__card-header {
-    font-size: 12px;
-    line-height: 16px;
-    font-family: $light-font;
-
-    & > * {
-      margin-right: 8px;
-    }
-  }
-
-  &__deleted-methods-additional-info {
-    font-size: 12px;
-    color: $slate-gray;
-  }
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 8px;
 }
