EPMDJ-2886: added redesigned build and scope coverage card
Issue: EPMDJ-2886, EPMDJ-2887

--- a/src/common/style-guide/_colors.scss
+++ b/src/common/style-guide/_colors.scss
@@ -81,4 +81,7 @@ $orange: (
 
 $data-visualization: (
   card-progress-bar: #ccd0db,
+  build-cover: #62adfc,
+  overlapping: #4f8ac9,
+  scope-cover: #aed4fd,
 );
