--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/action-section/action-section.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/action-section/action-section.module.scss
@@ -1,7 +1,8 @@
 @import '~common/style-guide/index';
 
 .action-section {
-  border-left: 1px solid map-get($color-palette, light-blue);
+  border-left: 1px solid map-get($monochrome, medium-tint);
+  color: map-get($monochrome, default);
 
   &__action {
     padding-left: 16px;
@@ -9,36 +10,30 @@
   }
 
   &__action-name {
-    margin-bottom: 5px;
-    font-size: 13px;
+    font-size: 12px;
     line-height: 16px;
     font-family: $semibold-font;
     text-transform: uppercase;
-    color: $slate-gray;
   }
 
   &__count {
     font-size: 20px;
-    line-height: 24px;
-    pointer-events: none;
+    line-height: 32px;
+    color: map-get($monochrome, black);
+    cursor: pointer;
 
-    &--type {
-      &--error {
-        color: map-get($color-palette, red100);
-      }
+    &:hover {
+      color: map-get($primary-blue, medium-tint);
     }
+  }
 
-    &--clickable {
-      background-image: linear-gradient(
-        to right,
-        map-get($color-palette, black100) 50%,
-        transparent 50%
-      );
-      background-position: 0 1.15em;
-      background-repeat: repeat-x;
-      background-size: 2px 1px;
-      pointer-events: auto;
-      cursor: pointer;
-    }
+  &__link-icon {
+    margin-left: 4px;
+    color: map-get($primary-blue, default);
+  }
+
+  &__not-available {
+    font-size: 20px;
+    line-height: 32px;
   }
 }
